* padding/overflow fix

--- a/static.getnightingale.com/css/style.css
+++ b/static.getnightingale.com/css/style.css
@@ -297,7 +297,7 @@ td { vertical-align: top; }
 	
 	border: 2px solid #4673AA;
 	
-	padding: 10px;
+	padding: 10px 0 10px 10px;
 	text-align: center;
 }
 
